# Aletheia

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
checks/: auth.py  rest.py  ws.py
config/: .env.example  settings.py  watcher.py
data/: feed.py  historical.py  market_state.py  normalization.py  orderbook.py  trade_tape.py
deribit/: __init__.py  connector.py  rest.py  types.py
docs/: FILE_REFERENCE.md
examples/: print_orderbook.py  stream_index.py  stream_options.py  stream_perpetual.py
exchange/: base.py  registry.py
exchange/binance/: connector.py  rest.py  ws.py
exchange/deribit/: connector.py
execution/: killswitch.py  oms.py  orders.py  placer.py  pnl.py  pretrade.py  reconciler.py  tracker.py
models/: physical_distribution.py  volatility_models.py
options/: calibration.py  risk_neutral_distribution.py  surface.py
risk/: greeks.py  limits.py
signals/: distribution_arbitrage.py
strategies/: option_relative_value.py
terminal/: app.py  bridge.py
terminal/screens/: inventory.py  pnl.py  quotes.py
utils/: latency.py  logger.py  metrics.py
