[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "data*",
    "deribit*",
    "exchange*",
    "options*",
    "models*",
    "signals*",
    "strategies*",
    "risk*",
    "execution*",
    "research*",
    "utils*",
    "checks*",
    "examples*",
]
